[package]
name = "rui-ios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
swift-bridge-build = "0.1.31"
cbindgen = "0.23.0"

[dependencies]
rui = { version = "0.3.0", default-features = false }
swift-bridge = "0.1.31"